Button color fix

--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ footer{
     align-items: center;
 }
 footer a{
-    background-color: #110303;
+    background-color: #1c2025;
     padding: 5vh 15vw;
     border-radius: 50px;
     text-decoration: none;
